--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <form method="post" enctype="multipart/form-data">
+      <input type="file" name="imageupload">
+      <input type="submit" name="uploadimage" value="Upload Image">
+    </form>
   </body>
 </html>
