Updates upload function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <form method="post" enctype="multipart/form-data">
-      <input type="file" name="imageupload">
-      <input type="submit" name="uploadimage" value="Upload Image">
+      <input type="file" name="selected_file">
+      <input type="submit" name="file_upload" value="Upload file">
     </form>
   </body>
 </html>
